@@ -101,3 +101,7 @@ confirmation=Potvrzen\u00ED
 abbrHours=h
 abbrMinutes=m
 abbrSeconds=s
+
+error1=chyba
+error2to4=chyby
+error5more=chyb
