@@ -87,3 +87,7 @@ confirmation=Confirmation
 abbrHours=h
 abbrMinutes=m
 abbrSeconds=s
+
+error1=error
+error2to4=errors
+error5more=errors
