@@ -42,6 +42,21 @@ statusbarpanel .nagioschecker-box {
   margin:0;
 }
 
+.nagioschecker-errors {
+  margin:0;
+
+  margin-left:2px;
+  margin-right:2px;
+  font-weight: bold;
+  font-size:11px;
+  color: red;
+ 
+  padding-left: 2px;
+  padding-right: 2px;
+  
+    border: 1px red solid;
+
+}
 
 .nagioschecker-down-image {
   background-color:#CC0000;
